# fitting-room

./: .gitignore  CHANGELOG.md  CMakeLists.txt  KNOWN-ISSUES.md  PRESETS.md  README.md  THIRD-PARTY-NOTICES.md  vcpkg.json
fomod/: ModuleConfig.xml  info.xml
nexus/: DESCRIPTION.bbcode
papyrus/: OutfitSlotsSAM.pex  OutfitSlotsSAM.psc
src/: AutoPresets.cpp  AutoPresets.h  BipedHooks.cpp  BipedHooks.h  BipedPost.cpp  BipedPost.h  Collection.cpp  Collection.h  CrashGuard.cpp  CrashGuard.h  Diagnostics.cpp  Diagnostics.h  EditTargetLabel.h  EditorGate.h  EditorStyle.cpp  EditorStyle.h  EditorUI.cpp  EditorUI.h  EditorWindow.cpp  EditorWindow.h  Favorites.cpp  Favorites.h  FooterNotice.h  FuckCompat.h  Icons.h  ImGuiOverlay.cpp  ImGuiOverlay.h  InputListener.cpp  InputListener.h  JsonCodec.cpp  JsonCodec.h  KeyboardArbiter.h  LoreModule.cpp  LoreModule.h  MenuButton.cpp  MenuButton.h  Migration.h  NpcAssignments.h  NpcLookup.h  NpcResolve.h  (+42 more)
tests/: test_editorgate.cpp  test_jsoncodec.cpp  test_keyboardarbiter.cpp  test_npcsession.cpp  test_outfit.cpp  test_persistence.cpp  test_refreshgate.cpp  test_setdetector.cpp  test_showcase_tabs.cpp  test_weaponslots.cpp
tools/: build.bat  build_symbols.bat  make_fomod.sh  make_lore_esp.py
